# tiny-link

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  keywords.txt  library.properties  platformio.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cpp-ci.yml
examples/Auto_Update/: Mode1_MainLoop.ino  Mode2_TimerISR.ino  Mode3_SerialEvent.ino  README.md  SharedData.h
examples/Basic_Duplex/: ESPM3_Bridge.ino  README.md  Tiny88_Sensor.ino
examples/Basic_Duplex_Callback/: ESPM3_Bridge.ino  README.md  SharedData.h  Tiny88_Sensor.ino
examples/Basic_Duplex_Polling/: ESPM3_Bridge.ino  README.md  SharedData.h  Tiny88_Sensor.ino
examples/Gateway_Handshake_Calback/: ESPM3_Bridge.ino  SharedData.h  Tiny88_Sensor.ino
examples/Gateway_Handshake_Polling/: ESPM3_Bridge.ino  SharedData.h  Tiny88_Sensor.ino
examples/IoT_Sensor_Gateway_Polling/: ATtiny88_Sensor.ino  ESP8266_Gateway.ino  (+1 more)
src/: CobsCodec.cpp  CobsCodec.h  Fletcher16.cpp  Fletcher16.h  Packet.h  TinyLink.h  TinyProtocol.h  Version.h  library.json  version.h
test/: globals.cpp  globals.h  test_ackmessage.cpp  test_ackmessage_more.cpp  test_callback.cpp  test_cobs.cpp  test_debugmessage.cpp  test_debugmessage_edgecases.cpp  test_duplex.cpp  test_fletcher16.cpp  test_handshake.cpp  test_logmessage.cpp  test_main.cpp  test_message_type.cpp  test_packet.cpp  test_protocol.cpp  test_runner.cpp  test_shim.hpp  test_stats.cpp  test_status.cpp
tests/: TinyTestAdapter.h
(+37 files in other folders)
